<resources>
    <string name="app_name">Lost&amp;Found</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_phone">Phone doesnt match</string>
    <string name="invalid_date">Data must be in YYYY.MM.DD format</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>
    <string name="ann_create_failed">Announcement couldn\'t be created</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="new_user">New user?</string>
    <string name="create_new_account">Create new account</string>
    <string name="hey">Hey!</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="chat">Chat</string>
    <string name="notifications">Notifications</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="user_profile">User Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments">Comments</string>
    <string name="details">Details</string>
    <string name="start_chat">Start Chat</string>
    <string name="have_you_lost_something">Have you lost something?</string>
    <string name="do_you_want_to_find_someone">Do you want to find someone?</string>
    <string name="add">+</string>
    <string name="title">Title</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="good_job">Good job!</string>
    <string name="now_complete_your_profile">Now, complete your profile:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dd_mm_yyyy">YYYY-MM-DD</string>
    <string name="phone_number">Phone number</string>
    <string name="create_account">Create Account</string>
    <string name="see_the_announcement">See the announcement</string>
    <string name="no_selected_location">No selected location</string>
    <string name="lorem">Lorem ipsum! Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="profile">Profile</string>
    <string name="introduce_the_code_received_on_your_email">Introduce the code received on your email</string>
</resources>