<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard"
        android:checked="true"/>
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"/>
    <item
    android:id="@+id/nav_notif"
    android:icon="@drawable/ic_notifications"
    android:title="@string/notifications"/>
    <item
    android:id="@+id/nav_map"
    android:icon="@drawable/ic_map"
    android:title="@string/map"/>
    <item
    android:id="@+id/nav_profile"
    android:icon="@drawable/ic_account"
    android:title="@string/profile"/>
    <item
    android:id="@+id/nav_setting"
    android:icon="@drawable/ic_settings"
    android:title="@string/settings"/>

</group>
</menu>