<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="?backgroundColor"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/welcome"
        android:textColor="?textColorNormal"
        android:textSize="48sp"
        android:padding="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textColor="?textColorNormal"
        android:textSize="16sp"
        android:padding="2dp"/>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColorHint="?textColorDark"
    app:hintTextColor="?accentColor"
    app:boxStrokeColor="?accentColor"
    >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:textColor="?textColorDark"
        android:textColorHint="@color/black"
        android:backgroundTint="?inputColor"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"/>
</com.google.android.material.textfield.TextInputLayout>
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" -->
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:textColorHint="?textColorDark"
    app:hintTextColor="?accentColor"
    app:boxStrokeColor="?accentColor"
    >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:textColorHint="?textColorDark"
        android:textColor="?textColorDark"
        android:backgroundTint="?inputColor"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"/>
</com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColorHint="?textColorNormal"
        android:textAlignment="textEnd"
        />

    <Button
        android:id="@+id/login"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="275dp"
        android:minHeight="50dp"
        android:backgroundTint="?accentColor"
        android:textColor="?textColorLight"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center">
        <TextView
            android:layout_width="125dp"
            android:layout_height="0.5dp"
            android:background="?textColorNormal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16sp"
            android:textColor="?textColorNormal"
            android:layout_marginHorizontal="10dp"
            />
        <TextView
            android:layout_width="125dp"
            android:layout_height="0.5dp"
            android:background="?textColorNormal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="25sp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="20dp"
            android:src="@mipmap/ic_launcher"
            />
        <ImageView
            android:layout_width="25sp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="20dp"
            android:src="@mipmap/ic_launcher"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textColor="?textColorNormal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="?textColorNormal"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</LinearLayout>