<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="?backgroundColor"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterInformationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/good_job"
        android:textColor="?textColorNormal"
        android:textSize="48sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:padding="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_complete_your_profile"
        android:textColor="?textColorNormal"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat"

        android:padding="2dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="?textColorNormal"
        app:hintTextColor="?accentColor"
        app:boxStrokeColor="?accentColor"
        app:startIconDrawable="@mipmap/account"
        app:startIconTint="?textColorNormal"
        app:endIconTint="?textColorNormal"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:autofillHints="@string/first_name"
            android:fontFamily="@font/montserrat"
            android:hint="@string/first_name"
            android:textColor="?textColorNormal"
            android:textColorHint="@color/black"
            android:backgroundTint="?inputColor"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColorHint="?textColorNormal"
        app:hintTextColor="?accentColor"
        app:boxStrokeColor="?accentColor"
        app:startIconDrawable="@mipmap/account"
        app:startIconTint="?textColorNormal"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat"

            android:autofillHints="@string/last_name"
            android:hint="@string/last_name"
            android:textColorHint="?textColorNormal"
            android:textColor="?textColorNormal"
            android:backgroundTint="?inputColor"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColorHint="?textColorNormal"
        app:hintTextColor="?accentColor"
        app:boxStrokeColor="?accentColor"
        app:startIconDrawable="@mipmap/ic_calendar"
        app:startIconTint="?textColorNormal"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat"
            android:autofillHints="@string/dd_mm_yyyy"
            android:hint="@string/dd_mm_yyyy"
            android:textColorHint="?textColorNormal"
            android:textColor="?textColorNormal"
            android:backgroundTint="?inputColor"
            android:inputType="date"
            android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColorHint="?textColorNormal"
        app:hintTextColor="?accentColor"
        app:boxStrokeColor="?accentColor"
        app:startIconDrawable="@mipmap/ic_calendar"
        app:startIconTint="?textColorNormal"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat"
            android:autofillHints="@string/phone_number"
            android:hint="@string/phone_number"
            android:textColorHint="?textColorNormal"
            android:textColor="?textColorNormal"
            android:backgroundTint="?inputColor"
            android:inputType="phone"
            android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/create_acc"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="275dp"
        android:minHeight="60dp"
        android:backgroundTint="?accentColor"
        android:textColor="?textColorLight"
        android:fontFamily="@font/montserrat"

        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />



    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</LinearLayout>