<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:orientation="vertical"
    android:layout_margin="12dp"
    android:background="?backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="7dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/announcement_poster_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            android:src="@mipmap/mdi_account"
            />
        <TextView
            android:id="@+id/announcement_poster_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            />
        <ImageView
            android:id="@+id/announcement_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_horiz"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            />

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/announcement_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="?cardBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/announcement_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I lost My Wallet!!!"
            android:textStyle="bold"
            android:textSize="16sp"
                android:paddingVertical="5dp"
            />
            <TextView
                android:id="@+id/announcement_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                android:paddingVertical="5dp"
                android:textSize="14sp"
                android:lines="6"
                android:ellipsize="end"
                android:layout_marginBottom="7dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp">
                <TextView
                    android:id="@+id/announcement_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/comments"
                    app:drawableLeftCompat="@drawable/ic_ann_comment"
                    android:drawablePadding="3dp"/>
                <TextView
                    android:id="@+id/announcement_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details"
                    app:drawableLeftCompat="@drawable/ic_announcement_details"
                    android:drawablePadding="3dp"/>
                <TextView
                    android:id="@+id/announcement_startchat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_chat"
                    android:gravity="center_vertical"
                    app:drawableLeftCompat="@drawable/ic_ann_chat"
                    android:drawablePadding="3dp"/>
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>